--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,152 @@
+:root{
+  --bg-color: white;
+  --main-color: #2251DD;
+}
+
+@font-face {
+  font-family: 'Tatsuki';
+  src: url('./assets/fonts/handscript_regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Tatsuki';
+  src: url('./assets/fonts/handscript_Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Tatsuki-Outline';
+  src: url('./assets/fonts/Handscript_Outline-.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-color: var(--bg-color);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  color: black;
+  gap: 2rem;
+}
+
+.Title{
+  display: flex;
+  gap: 0.3rem;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.BoxModal{
+  padding: 2rem;
+  border-radius: 8px;
+  width: 35%;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1),
+              0 1px 2px rgba(0, 0, 0, 0.06);
+  border: 1px solid rgba(0,0,0,0.1)
+}
+
+.LoginContainer{
+  padding-top: 1rem;
+  overflow: hidden;
+}
+
+.LoginToggle{
+  display: flex;
+  background-color: #f4f6f8;
+  border-radius: 8px;
+  padding: 4px;
+  margin: 0 auto 1rem auto;
+}
+
+.ToggleButton{
+  flex: 1;
+  padding: 3px;
+  background: transparent;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 2.2rem;
+  font-family: "Tatsuki";
+  font-weight: 400;
+  transition: all 0.3s ease;
+}
+
+.ToggleButton.active{
+  color:#000;
+  background-color: white;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+}
+
+.Slider{
+  display: flex;
+  width: 200%;
+  transition: transform 0.5s ease;
+
+}
+
+.Form{
+  width: 50%;
+  box-sizing: border-box;
+}
+
+.SlideLogin{
+  transform: translateX(0%);
+}
+
+.SlideRegister{
+  transform: translateX(-50%);
+}
+
+.LoginFormContent{
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  text-align: left;
+}
+
+.LoginFormContent label{
+  font-size: 3rem;
+  font-family: "Tatsuki";
+}
+
+.LoginFormContent input {
+  padding: 10px;
+  border-radius: 6px;
+  border: 1px solid #d1d5db;
+  font-size: 2rem;
+  font-family: "Tatsuki";
+  outline: none;
+  transition: border-color 0.2s;
+}
+
+.LoginFormContent input:focus {
+  border-color: var(--main-color);
+}
+
+.SignInButton {
+  background-color: var(--main-color);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  padding: 10px;
+  border-radius: 6px;
+  border: none;
+  cursor: pointer;
+  font-family: "Tatsuki";
+  font-weight: 700;
+  font-size: 2rem;
+  transition: background-color 0.2s;
+  margin-top: 1rem;
 }
